# hermes-control

./: README.md  pyproject.toml
hermes_control/: auth.py  chat.py  config.py  docker_ctl.py  main.py  state_reader.py
packaging/: com.jim.hermes-control.plist
