[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-control"
version = "0.1.0"
description = "HTTP control sidecar for a Dockerized hermes-agent — exposes status, logs, sessions, cron, and lifecycle ops to Crucible."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_control*"]
